compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@pub_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                pub fn bar() -> Int32 {\n                    return 0;\n                }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Public(
                        Public {
                            location: Location(
                                40..43,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            47..50,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            56..61,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        56..61,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Literal(
                                            Int(
                                                IntLiteral {
                                                    value: 0,
                                                    location: Location(
                                                        91..92,
                                                    ),
                                                    kind: I32,
                                                },
                                            ),
                                        ),
                                    ),
                                    location: Location(
                                        84..93,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            62..111,
                        ),
                    },
                    location: Location(
                        40..111,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                13..125,
            ),
        },
    ),
]
