compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@pub_property.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            struct Foo {\n                pub x: Int32 = 1;\n            }\"#)"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        20..23,
                    ),
                },
                properties: [
                    Property {
                        visibility: Public(
                            Public {
                                location: Location(
                                    42..45,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "x",
                            location: Location(
                                46..47,
                            ),
                        },
                        property_type: Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            49..54,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        49..54,
                                    ),
                                },
                            },
                        ),
                        default_value: Some(
                            Literal(
                                Int(
                                    IntLiteral {
                                        value: 1,
                                        location: Location(
                                            57..58,
                                        ),
                                        kind: I32,
                                    },
                                ),
                            ),
                        ),
                        location: Location(
                            42..59,
                        ),
                        documentation: None,
                    },
                ],
                type_parameters: [],
                location: Location(
                    13..73,
                ),
                documentation: None,
            },
        ),
    ),
]
