compiler/lume_parser/src/snapshots/lume_parser__parser__tests__trait_snapshots@constrained_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"trait Add<T1, T2> where T1: Numeric where T2: Numeric {}\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                10..12,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: "Numeric",
                                    location: Location(
                                        28..35,
                                    ),
                                },
                            ),
                        ],
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                14..16,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: "Numeric",
                                    location: Location(
                                        46..53,
                                    ),
                                },
                            ),
                        ],
                    },
                ],
                methods: [],
                location: Location(
                    0..56,
                ),
            },
        ),
    ),
]
