compiler/lume_parser/src/snapshots/lume_parser__parser__tests__trait_snapshots@generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"trait Add<T> { }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T",
                            location: Location(
                                10..11,
                            ),
                        },
                        constraints: [],
                    },
                ],
                methods: [],
                location: Location(
                    0..16,
                ),
            },
        ),
    ),
]
