compiler/lume_parser/src/snapshots/lume_parser__parser__tests__trait_snapshots@generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"trait Add<T1, T2> { }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                10..12,
                            ),
                        },
                        constraints: [],
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                14..16,
                            ),
                        },
                        constraints: [],
                    },
                ],
                methods: [],
                location: Location(
                    0..21,
                ),
                documentation: None,
            },
        ),
    ),
]
