compiler/lume_parser/src/snapshots/lume_parser__parser__tests__trait_snapshots@method_impl.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"trait Add { pub fn add(other: int) -> int { return self + other; } }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [],
                methods: [
                    TraitMethodDefinition {
                        visibility: Public(
                            Public {
                                location: Location(
                                    12..15,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "add",
                            location: Location(
                                19..22,
                            ),
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: Location(
                                        23..28,
                                    ),
                                },
                                param_type: Scalar(
                                    ScalarType {
                                        name: Path {
                                            name: Identifier {
                                                name: "int",
                                                location: Location(
                                                    30..33,
                                                ),
                                            },
                                            root: NamespacePath {
                                                path: [],
                                                location: Location(
                                                    0..0,
                                                ),
                                            },
                                            location: Location(
                                                30..33,
                                            ),
                                        },
                                    },
                                ),
                                location: Location(
                                    23..33,
                                ),
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Scalar(
                                ScalarType {
                                    name: Path {
                                        name: Identifier {
                                            name: "int",
                                            location: Location(
                                                38..41,
                                            ),
                                        },
                                        root: NamespacePath {
                                            path: [],
                                            location: Location(
                                                0..0,
                                            ),
                                        },
                                        location: Location(
                                            38..41,
                                        ),
                                    },
                                },
                            ),
                        ),
                        block: Some(
                            Block {
                                statements: [
                                    Return(
                                        Return {
                                            value: Some(
                                                Call(
                                                    Call {
                                                        callee: Some(
                                                            Variable(
                                                                Variable {
                                                                    name: Identifier {
                                                                        name: "self",
                                                                        location: Location(
                                                                            51..55,
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                        ),
                                                        name: Path {
                                                            name: Identifier {
                                                                name: "+",
                                                                location: Location(
                                                                    56..57,
                                                                ),
                                                            },
                                                            root: NamespacePath {
                                                                path: [],
                                                                location: Location(
                                                                    0..0,
                                                                ),
                                                            },
                                                            location: Location(
                                                                56..57,
                                                            ),
                                                        },
                                                        arguments: [
                                                            Variable(
                                                                Variable {
                                                                    name: Identifier {
                                                                        name: "other",
                                                                        location: Location(
                                                                            58..63,
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                        type_arguments: [],
                                                        location: Location(
                                                            51..58,
                                                        ),
                                                    },
                                                ),
                                            ),
                                            location: Location(
                                                44..64,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    42..66,
                                ),
                            },
                        ),
                        location: Location(
                            16..66,
                        ),
                        documentation: None,
                    },
                ],
                location: Location(
                    0..68,
                ),
                documentation: None,
            },
        ),
    ),
]
