compiler/lume_parser/src/snapshots/lume_parser__parser__tests__trait_snapshots@undefined_constraint_type.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"trait Add<T> where T1: Numeric {}\")"
---
ConstrainedTypeParameterNotFound {
    source: NamedSource {
        name: "<temp>",
        content: "trait Add<T> where T1: Numeric {}",
    },
    range: 19..21,
    found: "T1",
    defined: [
        "T",
    ],
}
